--- a/css/style.css
+++ b/css/style.css
@@ -90,7 +90,7 @@ body {
     }
 
     .bg-header {
-      background: url('../img/Headline_EDIT.png') center;
+      background: url('../img/Headline_EDIT.png') no-repeat center center;
       background-size: cover;
       background-color: #f7b501;
   
