--- a/css/style.css
+++ b/css/style.css
@@ -9,7 +9,7 @@ body {
   }
   
   .bg-header {
-    background: url('../img/b.png') no-repeat center center;
+    background: url('../img/c.png') no-repeat center center;
     background-size: cover;
     background-color: #f7b501;
 
